--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-persist": "^6.0.0",
     "reset-css": "^5.0.2",
     "styled-components": "^6.1.12",
+    "swiper": "^11.1.9",
     "yup": "^1.4.0"
   },
   "devDependencies": {
