--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux-persist": "^6.0.0",
