--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dragon-spacex",
+  "homepage": "https://zetonen.github.io/dragon-spacex/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
